--- a/my-lens-app/package.json
+++ b/my-lens-app/package.json
@@ -6,17 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.32.6",
+    "@thirdweb-dev/react": "^3.14.34",
+    "@thirdweb-dev/sdk": "^3.10.53",
+    "@thirdweb-dev/storage": "^1.2.6",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "ethers": "^5.7.2",
+    "graphql": "^16.8.0",
     "next": "13.4.16",
+    "query": "github:tanstack/react-query",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
-  }
+    "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/fragment-matcher": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-react-query": "^4.1.0"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
