--- a/my-lens-app/package.json
+++ b/my-lens-app/package.json
@@ -10,6 +10,9 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@livepeer/react": "^2.8.0",
     "@tanstack/react-query": "^4.32.6",
     "@thirdweb-dev/react": "^3.14.34",
     "@thirdweb-dev/sdk": "^3.10.53",
@@ -21,12 +24,14 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "ethers": "^5.7.2",
+    "flowbite": "^1.8.1",
+    "framer-motion": "^10.16.1",
     "graphql": "^16.8.0",
     "next": "13.4.16",
     "query": "github:tanstack/react-query",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "^5.1.6"
+    "truncate-eth-address": "^1.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -35,8 +40,13 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
     "autoprefixer": "^10.4.15",
+    "daisyui": "^3.6.1",
     "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
