--- a/my-lens-app/package.json
+++ b/my-lens-app/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@livepeer/react": "^2.8.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^4.32.6",
+    "@thirdweb-dev/auth": "^3.2.39",
     "@thirdweb-dev/react": "^3.14.34",
     "@thirdweb-dev/sdk": "^3.10.53",
     "@thirdweb-dev/storage": "^1.2.6",
