--- a/my-lens-app/package.json
+++ b/my-lens-app/package.json
@@ -33,6 +33,7 @@
     "query": "github:tanstack/react-query",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "truncate-eth-address": "^1.0.2"
   },
   "devDependencies": {
