--- a/my-lens-app/package.json
+++ b/my-lens-app/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@lens-protocol/client": "^1.3.1",
+    "@lens-protocol/react-web": "^1.3.1",
+    "@lens-protocol/wagmi": "^2.1.1",
     "@livepeer/react": "^2.8.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^4.32.6",
     "@thirdweb-dev/auth": "^3.2.39",
     "@thirdweb-dev/react": "^3.14.34",
-    "@thirdweb-dev/sdk": "^3.10.53",
+    "@thirdweb-dev/sdk": "^3.10.59",
     "@thirdweb-dev/storage": "^1.2.6",
     "@types/node": "20.5.0",
+    "@types/omit-deep": "^0.3.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "dotenv": "^16.3.1",
@@ -30,11 +34,15 @@
     "framer-motion": "^10.16.1",
     "graphql": "^16.8.0",
     "next": "13.4.16",
+    "omit-deep": "^0.3.0",
     "query": "github:tanstack/react-query",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "truncate-eth-address": "^1.0.2"
+    "truncate-eth-address": "^1.0.2",
+    "uuidv4": "^6.2.13",
+    "viem": "^1.15.0",
+    "wagmi": "^1.4.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
