--- a/my-lens-app/package.json
+++ b/my-lens-app/package.json
@@ -31,12 +31,13 @@
     "eslint-config-next": "13.4.16",
     "ethers": "^5.7.2",
     "flowbite": "^1.8.1",
-    "framer-motion": "^10.16.1",
+    "framer-motion": "^10.16.4",
     "graphql": "^16.8.0",
     "next": "13.4.16",
     "omit-deep": "^0.3.0",
     "query": "github:tanstack/react-query",
     "react": "18.2.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "truncate-eth-address": "^1.0.2",
